--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bulma": "^0.9.3",
     "connect-session-sequelize": "^7.1.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
+    "mysql2": "^2.3.3",
+    "ngx-text-diff": "^0.6.0",
+    "nodemon": "^2.0.15",
     "sequelize": "^6.17.0"
   }
 }
